Fix for bug 687984.

Incomplete data stream gets artifical data for both DCTE and now
also for PNGPE streams.

Note that it would be nice if all streams either handled missing data
or didn't.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@5850 a1074d23-0009-0410-80fe-cf8c14f379e6